# linear_chess_engine

./: Cargo.toml  README.md
src/: _csv_fen_to_bitboard.rs  _linear_regression.rs  _neural_network.rs  attacks.rs  bitboard.rs  eval.rs  eval_.rs  hashing.rs  main.rs  move_gen.rs  move_scoring.rs  moves.rs  perft.rs  random_numbers.rs  search.rs  transposition.rs  tweak.rs  uci.rs
