[package]
name = "chess"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.5.23" }
clap_derive = { version = "4.0.0-rc.1" }
csv = "1.2.0"
lazy_static = "1.5.0"
nalgebra = "0.33.2"
rand = "0.8.5"
regex = "1.11.1"
rng = "0.1.0"
serde = { version = "1.0.215", features = ["derive"] }
serde_json = "1.0.133"
tokio = "1.41.1"
linfa = "0.7.0"
linfa-linear = "0.7.0"
ndarray = "0.15.6"
polars = { version = "0.35.4", features = ["ndarray"]}
bincode = "1.3.3"
